--- a/GoodApi/GoodApi.csproj
+++ b/GoodApi/GoodApi.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OcelotDemo.Models\OcelotDemo.Models.csproj" />
   </ItemGroup>
 
 </Project>
