--- a/OrderApi/OrderApi.csproj
+++ b/OrderApi/OrderApi.csproj
@@ -10,6 +10,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OcelotDemo.Models\OcelotDemo.Models.csproj" />
   </ItemGroup>
 
 </Project>
