--- a/OcelotDemo/OcelotDemo.csproj
+++ b/OcelotDemo/OcelotDemo.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Ocelot" Version="12.1.0-unstable0001" />
+    <PackageReference Include="Ocelot.Provider.Consul" Version="0.1.2" />
   </ItemGroup>
 
   <ItemGroup>
