--- a/OcelotDemo/OcelotDemo.csproj
+++ b/OcelotDemo/OcelotDemo.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Ocelot" Version="12.1.0-unstable0001" />
     <PackageReference Include="Ocelot.Provider.Consul" Version="0.1.2" />
