--- a/OcelotDemo/appsettings.json
+++ b/OcelotDemo/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "Warning"
     }
   },
+  "IdentityServerOptions": {
+
+    "ServerIP": "localhost",
+    "ServerPort": 5003,
+    "IdentityScheme": "Bearer",
+    "ResourceName": "OcelotApi"
+  },
   "AllowedHosts": "*"
 }
