--- a/OcelotDemo/OcelotDemo.csproj
+++ b/OcelotDemo/OcelotDemo.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ocelot.ConfigAuthLimitCache\Ocelot.ConfigAuthLimitCache.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="ocelot.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
